fix side bar overlap shit

--- a/src/main/resources/CSS/FXML/Sidebar.css
+++ b/src/main/resources/CSS/FXML/Sidebar.css
@@ -1,6 +1,5 @@
 .PackList{
     -fx-opacity: 1;
-    -fx-background-insets: 0;
 }
 
 #SettingsBar{
